ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostdeals-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"   # 🔥 THIS FIXES IT
spec:
  rules:
  - host: hostdeals.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
